# normaliza_iniciativas

./: .env.example  .gitingore  README.md  baixa_dados.ipynb  baixa_dados.py  pyproject.toml
normaliza_iniciativas/: normalizer.py  teste_1.py  teste_2.py
