[tool.poetry]
name = "normaliza-iniciativas"
version = "0.1.0"
description = ""
authors = ["Kyle Felipe <kylefelipe@gmail.com>"]
readme = "README.md"
packages = [
    { include = "normaliza_iniciativas", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
geopandas = "^1.0.1"
requests = "^2.32.3"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
